@@ -11,8 +11,7 @@
 #include "game/Reference.h"
 #include "game/ComponentEx.h"
 #include "game/Transaction.h"
-
-#include "game/utils/modelgen.h"
+#include "game/modelgen.h"
 
 #include "boost/bind.hpp"
 
@@ -104,7 +103,7 @@ Quotas_Specification_Impl::~Quotas_Specification_Impl (void)
 //
 // initialize
 //
-int Quotas_Specification_Impl::initialize (GAME::Project & project)
+int Quotas_Specification_Impl::initialize (GAME::Project project)
 {
   // Get the set of add-ons for this project.
   std::vector <GAME::ComponentEx> addons;
@@ -119,11 +118,12 @@ int Quotas_Specification_Impl::initialize (GAME::Project & project)
                            addons.end (),
                            boost::bind (std::equal_to <std::string> (),
                                         name,
-                                        boost::bind (&GAME::ComponentEx::progid, _1)));
+                                        boost::bind (&GAME::ComponentEx::impl_type::progid,
+                                                     boost::bind (&GAME::ComponentEx::get, _1))));
 
   if (result != addons.end ())
   {
-    HRESULT hr = (*result)->QueryInterface (&this->configurator_);
+    HRESULT hr = (*result)->impl ()->QueryInterface (&this->configurator_);
 
     if (hr == S_OK)
     {
@@ -139,12 +139,13 @@ int Quotas_Specification_Impl::initialize (GAME::Project & project)
 // invoke_ex
 //
 int Quotas_Specification_Impl::
-invoke_ex (GAME::Project & project,
-           GAME::FCO & fco,
+invoke_ex (GAME::Project project,
+           GAME::FCO_in fco,
            std::vector <GAME::FCO> & selected,
            long flags)
 {
   using GAME::Folder;
+  using GAME::Mga_t;
 
   // Start a new transaction.
   GAME::Transaction t (project);
@@ -152,20 +153,18 @@ invoke_ex (GAME::Project & project,
   // Obtain the root folder for the project.
   Folder root_folder = project.root_folder ();
 
-  std::vector <GAME::Folder> idl_folders;
-  root_folder.children (meta::InterfaceDefinitions, idl_folders);
+  std::vector <Folder> idl_folders;
+  root_folder->children (meta::InterfaceDefinitions, idl_folders);
 
   // First, make sure the target directory for the generated driver
   // components exists in the current model.
-  if (GAME::create_if_not (root_folder,
-                           meta::InterfaceDefinitions,
-                           idl_folders,
-                           this->quotas_idl_folder_,
-      GAME::contains (boost::bind (std::equal_to <std::string> (),
-                                   Quotas_InterfaceDefinitions,
-                                   boost::bind (&Folder::name, _1)))))
+  if (GAME::create_if_not <Mga_t> (root_folder, meta::InterfaceDefinitions, this->quotas_idl_folder_,
+      GAME::contains <Mga_t> (boost::bind (std::equal_to <std::string> (),
+                              Quotas_InterfaceDefinitions,
+                              boost::bind (&GAME::Folder::impl_type::name,
+                                           boost::bind (&GAME::Folder::get, _1))))))
   {
-    this->quotas_idl_folder_.name (Quotas_InterfaceDefinitions);
+    this->quotas_idl_folder_->name (Quotas_InterfaceDefinitions);
   }
 
   // Now that we have the interface definition folder, let's go through
@@ -187,14 +186,14 @@ invoke_ex (GAME::Project & project,
 // visit_interface_definitions
 //
 void Quotas_Specification_Impl::
-visit_interface_definitions (const GAME::Folder & folder)
+visit_interface_definitions (const GAME::Folder_in folder)
 {
-  if (folder.name () == Quotas_InterfaceDefinitions)
+  if (folder->name () == Quotas_InterfaceDefinitions)
     return;
 
   // Select all the children File elements and visit them.
   std::vector <GAME::Model> files;
-  folder.children (meta::File, files);
+  folder->children (meta::File, files);
 
   std::for_each (files.begin (),
                  files.end (),
@@ -206,51 +205,49 @@ visit_interface_definitions (const GAME::Folder & folder)
 //
 // visit_file
 //
-void Quotas_Specification_Impl::visit_file (const GAME::Model & file)
+void Quotas_Specification_Impl::visit_file (const GAME::Model_in file)
 {
+  using GAME::Mga_t;
+
   // First, we need to create a Quotas file for the current file,
   // which is prefixed with the Quotas_ string. This is where all
   // auto-generates specifications will be placed.
-  std::string quotas_filename ("Quotas_");
-  quotas_filename.append (file.name ());
+  const std::string quotas_filename = "Quotas_" + file->name ();
 
   // Let's create the Quotas file element if it does not already
   // exist in the model.
   std::vector <GAME::Model> quotas_files;
-  this->quotas_idl_folder_.children (meta::File, quotas_files);
+  this->quotas_idl_folder_->children (meta::File, quotas_files);
 
-  if (GAME::create_if_not (this->quotas_idl_folder_,
-                           meta::File,
-                           quotas_files,
-                           this->active_model_,
-      GAME::contains (boost::bind (std::equal_to <std::string> (),
-                                   quotas_filename,
-                                   boost::bind (&GAME::Model::name, _1)))))
+  if (GAME::create_if_not <Mga_t> (this->quotas_idl_folder_, meta::File, this->active_model_,
+      GAME::contains <Mga_t> (boost::bind (std::equal_to <std::string> (),
+                              quotas_filename,
+                              boost::bind (&GAME::Model::impl_type::name,
+                                           boost::bind (&GAME::Model::get, _1))))))
   {
-    this->active_model_.name (quotas_filename);
+    this->active_model_->name (quotas_filename);
   }
 
   // Set the correct path for the Quotas file.
   std::string path ("Quotas");
-  const std::string current_path (file.attribute ("Path").string_value ());
+  const std::string current_path = file->attribute ("Path")->string_value ();
 
   if (!current_path.empty ())
     path += "/" + current_path;
 
-  this->active_model_.attribute ("Path").string_value (path);
+  this->active_model_->attribute ("Path")->string_value (path);
 
   // Next, place all elements under the Quotas namespace. This
   // is done by creating a package in the current file with the
   // name Quotas.
   const std::string Quotas ("Quotas");
-  if (GAME::create_if_not (this->active_model_,
-                           meta::Package,
-                           this->active_model_,
-      GAME::contains (boost::bind (std::equal_to <std::string> (),
-                                   Quotas,
-                                   boost::bind (&GAME::Model::name, _1)))))
+  if (GAME::create_if_not <Mga_t> (this->active_model_, meta::Package, this->active_model_,
+      GAME::contains <Mga_t> (boost::bind (std::equal_to <std::string> (),
+                              Quotas,
+                              boost::bind (&GAME::Model::impl_type::name,
+                                           boost::bind (&GAME::Model::get, _1))))))
   {
-    this->active_model_.name (Quotas);
+    this->active_model_->name (Quotas);
   }
 
   // Now, visit the contents of the file we are processing.
@@ -260,20 +257,21 @@ void Quotas_Specification_Impl::visit_file (const GAME::Model & file)
 //
 // visit_package
 //
-void Quotas_Specification_Impl::visit_package (const GAME::Model & package)
+void Quotas_Specification_Impl::visit_package (const GAME::Model_in package)
 {
+  using GAME::Mga_t;
+
   types::auto_stack as (this->stack_, this->active_model_);
-  std::string name (package.name ());
+  const std::string name = package->name ();
 
   // Create a duplicate package in the active model.
-  if (GAME::create_if_not (this->active_model_,
-                           meta::Package,
-                           this->active_model_,
-      GAME::contains (boost::bind (std::equal_to <std::string> (),
-                                   name,
-                                   boost::bind (&GAME::Model::name, _1)))))
+  if (GAME::create_if_not <Mga_t> (this->active_model_, meta::Package, this->active_model_,
+      GAME::contains <Mga_t> (boost::bind (std::equal_to <std::string> (),
+                              name,
+                              boost::bind (&GAME::Model::impl_type::name,
+                                           boost::bind (&GAME::Model::get, _1))))))
   {
-    this->active_model_.name (name);
+    this->active_model_->name (name);
   }
 
   // Visit the contents of this package.
@@ -284,11 +282,11 @@ void Quotas_Specification_Impl::visit_package (const GAME::Model & package)
 // visit_file_package
 //
 void Quotas_Specification_Impl::
-visit_file_package (const GAME::Model & model)
+visit_file_package (const GAME::Model_in model)
 {
   // First, let's visit the interface elements in the model.
   std::vector <GAME::Model> objects;
-  model.children (meta::Object, objects);
+  model->children (meta::Object, objects);
 
   std::for_each (objects.begin (),
                  objects.end (),
@@ -300,7 +298,7 @@ visit_file_package (const GAME::Model & model)
 
   // Finally, visit all the package elements in this model.
   std::vector <GAME::Model> packages;
-  model.children (meta::Package, packages);
+  model->children (meta::Package, packages);
 
   std::for_each (packages.begin (),
                  packages.end (),
@@ -312,8 +310,9 @@ visit_file_package (const GAME::Model & model)
 //
 // visit_object
 //
-void Quotas_Specification_Impl::visit_object (const GAME::Model & object)
+void Quotas_Specification_Impl::visit_object (const GAME::Model_in object)
 {
+  using GAME::Mga_t;
   types::auto_stack as (this->stack_, this->active_model_);
 
   // First, create a wrapper component for this object. Ideally,
@@ -322,19 +321,18 @@ void Quotas_Specification_Impl::visit_object (const GAME::Model & object)
   // the object using a *provides* specification, and for each attribute
   // on the object, we are going to map it to an attribute on the
   // wrapper component.
-  const std::string name (object.name ());
+  const std::string name = object->name ();
   const std::string component_name = name + "_ComponentFacade";
   const std::string facet_name = name + "_quotas";
 
   // Here we are creating the component wrapper for the object.
-  if (GAME::create_if_not (this->active_model_,
-                           meta::Component,
-                           this->active_model_,
-      GAME::contains (boost::bind (std::equal_to <std::string> (),
-                                   component_name,
-                                   boost::bind (&GAME::Model::name, _1)))))
+  if (GAME::create_if_not <Mga_t> (this->active_model_, meta::Component, this->active_model_,
+      GAME::contains <Mga_t> (boost::bind (std::equal_to <std::string> (),
+                              component_name,
+                              boost::bind (&GAME::Model::impl_type::name,
+                                           boost::bind (&GAME::Model::get, _1))))))
   {
-    this->active_model_.name (component_name);
+    this->active_model_->name (component_name);
   }
 
   // Store the component so we can create the driver's
@@ -346,21 +344,22 @@ void Quotas_Specification_Impl::visit_object (const GAME::Model & object)
   // into this method).
   GAME::Reference facet;
 
-  if (GAME::create_if_not (this->active_model_, meta::ProvidedRequestPort, facet,
-      GAME::contains (boost::bind (std::equal_to <GAME::FCO> (),
-                                   object,
-                                   boost::bind (&GAME::Reference::refers_to, _1)))))
+  if (GAME::create_if_not <Mga_t> (this->active_model_, meta::ProvidedRequestPort, facet,
+      GAME::contains <Mga_t> (boost::bind (std::equal_to <GAME::FCO> (),
+                              object,
+                              boost::bind (&GAME::Reference::impl_type::refers_to,
+                                           boost::bind (&GAME::Reference::get, _1))))))
   {
-    facet.refers_to (object);
+    facet->refers_to (object);
   }
 
-  facet.name (facet_name);
+  facet->name (facet_name);
 
   // Next, we need to mirror each of the attributes on the object
   // on this component. These should be delegated to the object
   // contained in this component.
   std::vector <GAME::Model> attrs;
-  object.children (meta::Attribute, attrs);
+  object->children (meta::Attribute, attrs);
 
   // [Attribute]
   std::for_each (attrs.begin (),
@@ -372,7 +371,7 @@ void Quotas_Specification_Impl::visit_object (const GAME::Model & object)
   attrs.clear ();
 
   // [ReadonlyAttribute]
-  object.children (meta::ReadonlyAttribute, attrs);
+  object->children (meta::ReadonlyAttribute, attrs);
   std::for_each (attrs.begin (),
                  attrs.end (),
                  boost::bind (&Quotas_Specification_Impl::visit_attribute_kind,
@@ -384,27 +383,29 @@ void Quotas_Specification_Impl::visit_object (const GAME::Model & object)
 // visit_attribute_kind
 //
 void Quotas_Specification_Impl::
-visit_attribute_kind (const GAME::Model & attr)
+visit_attribute_kind (const GAME::Model_in attr)
 {
+  using GAME::Mga_t;
+
   types::auto_stack as (this->stack_, this->active_model_);
 
   // Duplicate the attribute in the wrapper component.
   GAME::Model attribute;
-  const std::string name (attr.name ());
+  const std::string name (attr->name ());
+  const std::string attr_metaname (attr->meta ()->name ());
 
-  if (GAME::create_if_not (this->active_model_,
-                           attr.meta ().name (),
-                           this->active_model_,
-      GAME::contains (boost::bind (std::equal_to <std::string> (),
-                                   name,
-                                   boost::bind (&GAME::Model::name, _1)))))
+  if (GAME::create_if_not <Mga_t> (this->active_model_, attr_metaname, this->active_model_,
+      GAME::contains <Mga_t> (boost::bind (std::equal_to <std::string> (),
+                              name,
+                              boost::bind (&GAME::Model::impl_type::name,
+                                           boost::bind (&GAME::Model::get, _1))))))
   {
-    this->active_model_.name (name);
+    this->active_model_->name (name);
   }
 
   // We need to create the attribute member for the attribute.
   std::vector <GAME::Reference> members;
-  attr.children (meta::AttributeMember, members);
+  attr->children (meta::AttributeMember, members);
 
   if (!members.empty ())
     this->visit_attribute_member (members.front ());
@@ -414,18 +415,18 @@ visit_attribute_kind (const GAME::Model & attr)
 // visit_attribute_member
 //
 void Quotas_Specification_Impl::
-visit_attribute_member (const GAME::Reference & member)
+visit_attribute_member (const GAME::Reference_in member)
 {
   using GAME::Reference;
 
   Reference attr_member;
   std::vector <Reference> members;
-  this->active_model_.children (meta::AttributeMember, members);
+  this->active_model_->children (meta::AttributeMember, members);
 
   if (members.empty ())
-    attr_member = Reference::_create (this->active_model_, meta::AttributeMember);
+    attr_member = Reference::impl_type::_create (this->active_model_, meta::AttributeMember);
   else
     attr_member = members.front ();
 
-  attr_member.refers_to (member.refers_to ());
+  attr_member->refers_to (member->refers_to ());
 }
